Fixed broken CSS

--- a/Velo Gioielli/styles/scss/styles.scss
+++ b/Velo Gioielli/styles/scss/styles.scss
@@ -54,7 +54,6 @@ body {background-color: #ffffff; height:100%; position:relative;}
 
 /* 1em = 10px. Super easy Right? 945px = 94.5em -------------------------------------------- */
 
-<<<<<<< HEAD
 
 
 body {font-size: 62.5%;/*10px*/ line-height: 1.375em ; color: #333333; font-family: "soleil", "Avenir LT Std", Helvetica, sans-serif;  }
@@ -74,12 +73,7 @@ h1 {
 h2 {font-size: 3.5em;/*20px*/
 	line-height: 1.33em;
 	font-weight: normal;
-=======
-body {font-size: 62.5%;/*10px*/ line-height: 1.375em ; color: #333333; font-family: "Avenir LT Std" "soleil";  }
 
-h1 {
-	font-size: 5.25em;/*52.5px*/line-height: 1.2em;letter-spacing: 1.6;font-weight: normal;font-family: "Avenir LT Std", Helvetica;font-weight: 800;margin: 55px auto 32px auto;text-align: center;}
->>>>>>> New-Slideshow.-No-SVG
 	
 h2 {font-size: 3.5em;/*35px*/line-height: 1.33em;font-weight: normal;font-family: "Avenir LT Std", Helvetica;margin: 0 0 17px 0;}
 
